# LambdaGen

./: .gitignore  .gitmodules  ChangeLog.md  CodeGeneration.hs  CostEstimation.hs  Cpp.hs  ErrorTest.hs  Expr.hs  FunctionalTest.hs  LICENSE  LinAlg.hs  Main.hs  Parallel.hs  PerformanceTest.hs  Print.hs  Recursion.hs  Storage.hs  Test.hs  Type.hs  TypePrinter.hs  Typecheck.hs  Utility.hs  View.cpp  View.h  helper.h  package.yaml  readme.md  stack.yaml  test.hs
app/: Benchmark.hs  Main.hs  Server.hs
benchmark/: Benchmark.hs  CMakeLists.txt  readme.md
benchmark/data/: compose_data.py
cpp/: View.h  helper.h  main.cpp
docs/: design.md
eval/: eval  input.hs  main.cpp  result.hpp  run.sh
examples/differentiation/: Expr.hs  Main.hs  Replace.hs
lambdagen-editor/: package.json  tslint.json
lambdagen-editor/src/: App.css  App.tsx
lambdagen-editor/src/components/: BodyWidget.tsx  TrayItemWidget.tsx  TrayWidget.tsx
lambdagen-editor/src/components/ScalarNode/: ScalarNode.tsx  ScalarNodeWidget.tsx
lambdagen-editor/src/components/ScalarOpNode/: ScalarOpNode.tsx  ScalarOpNodeWidget.tsx
lambdagen-editor/src/components/SyntaxTreeNode/: SyntaxTreeNodeFactory.tsx  SyntaxTreeNodeModel.tsx  SyntaxTreeNodeWidget.tsx
src/: ClosureConversion.hs  CodeGeneration.hs  Compile.hs  ConstFold.hs  CostEstimation.hs  Cpp.hs  CppTemplate.hs  CppTemplateClosureConv.hs  CppTemplateInliner.hs  CpuCodeGen.hs  CpuCodeGenClosureConv.hs  CpuCodeGenInliner.hs  ErrorTest.hs  Eval.hs  Expr.hs  FunctionalTest.hs  Fusion.hs  LinAlg.hs  Main.hs  Metrics.hs  Naming.hs  Parallel.hs  PerformanceTest.hs  Print.hs  Recursion.hs  Replace.hs  Server.hs  Storage.hs  StorageClosureConv.hs  StorageInliner.hs  Test.hs  Transformation.hs  Type.hs  TypePrinter.hs  Typecheck.hs  Utility.hs  View.h  helper.h  my_sycl.h
src/Generate/: ConGenTest.hs  Contraction.hs  ContractionText.hs
src/Test/: ContractionTest.hs  ErrorTest.hs  FunctionalTest.hs  PerformanceTest.hs
tensor/: List.h  View.h  util.hpp
test/: CMakeLists.txt  Test.hs  View.h  build.sh  expect.txt  helper.h  main.cpp  result.hpp  result01.hpp  result02.hpp  result03.hpp  result04.hpp  result05.hpp  result06.hpp  result07.hpp  result08.hpp  result09.hpp  result1.hpp  result10.hpp  result11.hpp  result2.hpp  result3.hpp  result4.hpp  result5.hpp  result6.hpp  result7.hpp  result8.hpp  result9.hpp  test.sh  test.sln  test.vcxproj  test.vcxproj.filters
test/inc/: View.h  tester.hpp
test/kernel/: evaluator1.cpp  evaluator1.h  evaluator1.hpp  evaluator10.cpp  evaluator10.h  evaluator10.hpp  evaluator11.cpp  evaluator11.h  evaluator11.hpp  evaluator12.cpp  evaluator12.h  evaluator12.hpp  evaluator13.cpp  evaluator13.h  evaluator13.hpp  evaluator14.cpp  evaluator14.h  evaluator14.hpp  evaluator15.cpp  evaluator15.h  evaluator15.hpp  evaluator16.cpp  evaluator16.h  evaluator16.hpp  evaluator17.cpp  evaluator17.h  evaluator17.hpp  evaluator18.cpp  evaluator18.h  evaluator18.hpp  evaluator19.cpp  evaluator19.h  evaluator2.cpp  evaluator2.h  evaluator2.hpp  evaluator20.cpp  evaluator20.h  evaluator21.cpp  evaluator21.h  evaluator22.cpp  (+22 more)
